fix alignment of text in navbar

--- a/less/app.less
+++ b/less/app.less
@@ -25,5 +25,9 @@
   font-size: 20px;
   font-weight: 200;
   padding-bottom: 10px;
-  padding-top: 10px;
+  padding-top: 12px;
+  > img {
+    top: -1px;
+    position: relative;
+  }
 }
